--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,17 +4,32 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-feature  android:glEsVersion="0x00020000"  android:required="true"/>
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	
+	<permission
+          android:name="uow.hsckWE.WGZ.permission.MAPS_RECEIVE"
+          android:protectionLevel="signature"/>
+        <uses-permission android:name="uow.hsckWE.WGZ.permission.MAPS_RECEIVE"/>
+	
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name="uow.hsckWE.WGZ.MainActivity"
+            android:name="uow.hsckWE.WGZ.NewWindow"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +37,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-library android:required="true" android:name="com.google.android.maps"/>
+        <activity android:name="uow.hsckWE.WGZ.MainActivity" android:label="@string/app_name"></activity>
     </application>
-
+	<meta-data    android:name="com.google.android.maps.v2.API_KEY"    android:value="AIzaSyCu4SWss2BqrVClZwAawMpCQy4UAkCffWk"/>
 </manifest>
